* analyse modele global (lexicon englais lexicons français) dashboard version 4 session graphe et liste dashboard

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -171,7 +171,7 @@
                         <input type="hidden" name="form" value="id_file">
                         <div class="input-group">
                             <div class="custom-file">
-                                <input onchange="uploadfile()" type="file" name="file_text" class="custom-file-input" id="upload">
+                                <input onchange="uploadfile()" type="file" name="file_text" accept=".txt" class="custom-file-input" id="upload">
                                 <label id="filetext" class="custom-file-label" for="upload">choisir fichier</label>
                             </div>
                             <div class="input-group-append">
