--- a/web/templates/resultatfinal.html
+++ b/web/templates/resultatfinal.html
@@ -367,7 +367,8 @@
                                     aria-expanded="false" aria-controls="collapseThree">
                                 resultat final
                             </button>
-                            <a href="#" class="btn btn-success btn-icon-split">
+                            <a href="#" class="btn btn-success btn-icon-split"
+                               data-toggle="modal" data-target="#list_connector">
                                 <div class="d-flex flex-column justify-content-center">
                                     <span class="text">connector</span>
                                     <span class="text">{{session['total_connectors']|length}}</span>
@@ -376,7 +377,8 @@
                       <i class="fas fa-info-circle"></i>
                     </span>
                             </a>
-                            <a href="#" class="btn btn-secondary btn-icon-split">
+                            <a href="#" class="btn btn-secondary btn-icon-split"
+                               data-toggle="modal" data-target="#list_neg">
                                 <div class="d-flex flex-column justify-content-center">
                                     <span class="text">negation</span>
                                     <span class="text">{{session['total_negation']|length}}</span>
@@ -385,7 +387,8 @@
                       <i class="fas fa-info-circle"></i>
                     </span>
                             </a>
-                            <a href="#" class="btn btn-info btn-icon-split">
+                            <a href="#" class="btn btn-info btn-icon-split"
+                            data-toggle="modal" data-target="#list_adv">
                                 <div class="d-flex flex-column justify-content-center">
                                     <span class="text">adverbe</span>
                                     <span class="text">{{session['total_adverbe']|length}}</span>
@@ -570,6 +573,63 @@
                 </div>
                 <div class="modal-body">
                     {% for item in session['stat_nom'] %}
+                    <span class="badge badge-secondary">{{item}}</span>
+                    {% endfor %}
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="list_neg" tabindex="-1" role="dialog"
+         aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">liste des negation</h5>
+                </div>
+                <div class="modal-body">
+                    {% for item in session['total_negation'] %}
+                    <span class="badge badge-secondary">{{item}}</span>
+                    {% endfor %}
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="list_connector" tabindex="-1" role="dialog"
+         aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">liste des connecteur</h5>
+                </div>
+                <div class="modal-body">
+                    {% for item in session['total_connectors'] %}
+                    <span class="badge badge-secondary">{{item}}</span>
+                    {% endfor %}
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="list_adv" tabindex="-1" role="dialog"
+         aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">liste des adverbe</h5>
+                </div>
+                <div class="modal-body">
+                    {% for item in session['total_adverbe'] %}
                     <span class="badge badge-secondary">{{item}}</span>
                     {% endfor %}
                 </div>
