--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -117,15 +117,20 @@
                         <input type="hidden" name="form" value="id_text">
                         <textarea id="textarea" placeholder="Entrer votre texte ici ..... EX :This car is beautiful. "
                                   lang="en" rows="7" cols="100" id="input" name="input" form="usrform1"
-                                  spellcheck="true"></textarea>
+                                  spellcheck="true" autofocus="true"></textarea>
                         <div class="d-flex flex-row justify-content-around">
-                            <div class="input-group-append">
-                                <button disabled type="submit" id="button"
-                                        class="btn btn-primary">
-                                    pre-traitemnt
-                                </button>
-                                <button style="margin-left:10px" type="reset" class="btn btn-danger">supprimer</button>
-                            </div>
+                            <button disabled type="submit" id="button" class="btn btn-primary btn-icon-split">
+                                <span class="text">commencer</span>
+                                <span class="icon text-white-50">
+                                <i class="fas fa-chevron-circle-right"></i>
+                                </span>
+                            </button>
+                            <button type="reset" class="btn btn-danger btn-icon-split">
+                                <span class="text">effacer</span>
+                                <span class="icon text-white-50">
+                                <i class="far fa-trash-alt"></i>
+                                </span>
+                            </button>
                         </div>
                     </form>
                 </div>
@@ -167,15 +172,21 @@
                     cette option nous permettre de selectioner fichier.
                 </div>
                 <div class="d-flex flex-row justify-content-around px-2 py-2">
-                    <form style="width: 100%" method="post" action="/res" accept=".txt" enctype = "multipart/form-data">
+                    <form style="width: 100%" method="post" action="/res" accept=".txt" enctype="multipart/form-data">
                         <input type="hidden" name="form" value="id_file">
                         <div class="input-group">
                             <div class="custom-file">
-                                <input onchange="uploadfile()" type="file" name="file_text" accept=".txt" class="custom-file-input" id="upload">
+                                <input onchange="uploadfile()" type="file" name="file_text" accept=".txt"
+                                       class="custom-file-input" id="upload">
                                 <label id="filetext" class="custom-file-label" for="upload">choisir fichier</label>
                             </div>
                             <div class="input-group-append">
-                                <button onclick="starprogress()" class="btn btn-outline-secondary" type="submit">Button
+                                <button id="button_file" hidden onclick="starprogress()" class="btn btn-primary btn-icon-split"
+                                        type="submit">
+                                    <span class="text">commencer</span>
+                                    <span class="icon text-white-50">
+                                <i class="fas fa-chevron-circle-right"></i>
+                                </span>
                                 </button>
                             </div>
                         </div>
