--- a/web/templates/resultatfinal.html
+++ b/web/templates/resultatfinal.html
@@ -168,6 +168,14 @@
                                       <i class="fas fa-times-circle"></i>
                                     </span>
                             </a>
+                            <button onclick="reprocess_correction()" class="btn btn-primary btn-icon-split">
+                                <div>
+                                    <span class="text">retraitement</span>
+                                </div>
+                                <span class="icon text-white-50">
+                                      <i class="fas fa-times-circle"></i>
+                                    </span>
+                            </button>
                         </h5>
 
                     </div>
@@ -183,8 +191,12 @@
                                 <h5 class="m-0 font-weight-bold text-primary mx-2">langue est :
                                     {{session['language']}}</h5>
                                 <div class="d-flex flex-row justify-content-center card-body">
-                                    <textarea class="form-control" id="exampleFormControlTextarea1"
-                                              rows="3">{{session['content']}}</textarea>
+                                    <form class="d-flex " id="form_correction"  method="post" action="/res">
+                                        <input type="hidden" name="id_reprocess" value="form_correction">
+                                        <textarea lang="en" rows="7" cols="100" name="content" class="form-control" id="exampleFormControlTextarea1"
+                                                  rows="3">{{session['content']}}</textarea>
+                                    </form>
+
                                 </div>
                                 {% for j in range(session['list_word'][0]| length) %}
                                 <div class="row justify-content-star align-items-center ml-4">
@@ -303,6 +315,14 @@
                       <i class="fas fa-info-circle"></i>
                     </span>
                             </a>
+                            <button onclick="reprocess_subjectivity()" class="btn btn-primary btn-icon-split">
+                                <div>
+                                    <span class="text">retraitement</span>
+                                </div>
+                                <span class="icon text-white-50">
+                                      <i class="fas fa-times-circle"></i>
+                                    </span>
+                            </button>
                             <a href="#" class="btn btn-info btn-icon-split">
                                 <div>
                                     <span class="text">objectif</span>
@@ -326,7 +346,9 @@
                                     <h6 class="m-0 font-weight-bold text-primary">Liste des phrases et subjectivite</h6>
                                 </div>
 
-                                <form class="d-flex flex-column mx-4 my-4">
+                                <form id="form_subjectivity" action="/res" method="post"
+                                      class="d-flex flex-column mx-4 my-4">
+                                    <input type="hidden" name="id_reprocess" value="subjectivity">
                                     {% for n in range(session['sub_sentence']| length) %}
                                     <div class="d-flex flex-row align-items-center">
                                         <h5 class="ml-3" id="input" name="input{{n}}" value="1">
