* analyse modele global (lexicon englais lexicons français) dashboard version 4 session graphe et liste dashboard

--- a/web/templates/resultatfinal.html
+++ b/web/templates/resultatfinal.html
@@ -348,7 +348,7 @@
 
                                 <form id="form_subjectivity" action="/res" method="post"
                                       class="d-flex flex-column mx-4 my-4">
-                                    <input type="hidden" name="id_reprocess" value="subjectivity">
+                                    <input type="hidden" name="id_reprocess" value="form_subjectivity">
                                     {% for n in range(session['sub_sentence']| length) %}
                                     <div class="d-flex flex-row align-items-center">
                                         <h5 class="ml-3" id="input" name="input{{n}}" value="1">
