* analyse modele global (lexicon englais lexicons français) dashboard version 4 session graphe et liste dashboard reprocess

--- a/web/templates/resultatfinal.html
+++ b/web/templates/resultatfinal.html
@@ -159,7 +159,7 @@
                                     aria-expanded="true" aria-controls="collapseOne">
                                 correction d'othographe
                             </button>
-                            <a href="#" class="btn btn-danger btn-icon-split">
+                            <button class="btn btn-danger btn-sm btn-icon-split">
                                 <div>
                                     <span class="text">erreurs</span>
                                     <span id="nbr_errors" class="badge badge-light mx-2">{{session['list_word'][0]|length}}</span>
@@ -167,8 +167,9 @@
                                 <span class="icon text-white-50">
                                       <i class="fas fa-times-circle"></i>
                                     </span>
-                            </a>
-                            <button onclick="reprocess_correction()" class="btn btn-primary btn-icon-split">
+                            </button>
+                            <button onclick="reprocess_correction()"
+                                    class="btn btn-primary btn-sm float-right btn-icon-split">
                                 <div>
                                     <span class="text">retraitement</span>
                                 </div>
@@ -307,7 +308,7 @@
                                     aria-expanded="true" aria-controls="subjectivitycollapseOne">
                                 subjectvite
                             </button>
-                            <a href="#" class="btn btn-success btn-icon-split">
+                            <button class="btn btn-success btn-sm btn-icon-split">
                                 <div>
                                     <span class="text">subjective</span>
                                     <span class="badge badge-light mx-2">{{session['nbr_sub']}}</span>
@@ -315,16 +316,8 @@
                                 <span class="icon text-white-50">
                       <i class="fas fa-info-circle"></i>
                     </span>
-                            </a>
-                            <button onclick="reprocess_subjectivity()" class="btn btn-primary btn-icon-split">
-                                <div>
-                                    <span class="text">retraitement</span>
-                                </div>
-                                <span class="icon text-white-50">
-                                      <i class="fas fa-times-circle"></i>
-                                    </span>
                             </button>
-                            <a href="#" class="btn btn-info btn-icon-split">
+                            <button class="btn btn-info btn-sm btn-icon-split">
                                 <div>
                                     <span class="text">objectif</span>
                                     <span class="badge badge-light mx-2">{{session['nbr_obj']}}</span>
@@ -332,8 +325,16 @@
                                 <span class="icon text-white-50">
                       <i class="fas fa-info-circle"></i>
                                       </span>
-                            </a>
-
+                            </button>
+                            <button onclick="reprocess_subjectivity()"
+                                    class="btn btn-primary btn-sm float-right btn-icon-split">
+                                <div>
+                                    <span class="text">retraitement</span>
+                                </div>
+                                <span class="icon text-white-50">
+                                      <i class="fas fa-times-circle"></i>
+                                    </span>
+                            </button>
 
                         </h5>
                     </div>
@@ -357,20 +358,20 @@
                                         <input type="hidden" name="r_id{{n}}" value="{{session['sub_sentence'][n]}}"/>
                                         <div class="btn-group btn-group-toggle mx-2" data-toggle="buttons">
                                             {% if session['subjective_state'][n] %}
-                                            <label class="btn btn-outline-primary active">
+                                            <label class="btn btn-outline-primary btn-sm active">
                                                 <input type="radio" name="optradio{{n}}" value="true" autocomplete="off"
                                                        checked> subjectif
                                             </label>
-                                            <label class="btn btn-outline-primary">
+                                            <label class="btn btn-outline-primary btn-sm">
                                                 <input type="radio" name="optradio{{n}}" value="true"
                                                        autocomplete="off"> objectif
                                             </label>
                                             {% else %}
-                                            <label class="btn btn-outline-primary active">
+                                            <label class="btn btn-outline-primary btn-sm active">
                                                 <input type="radio" name="optradio{{n}}" value="true" autocomplete="off"
                                                 > subjectif
                                             </label>
-                                            <label class="btn btn-outline-primary">
+                                            <label class="btn btn-outline-primary btn-sm">
                                                 <input type="radio" name="optradio{{n}}" value="true"
                                                        autocomplete="off" checked> objectif
                                             </label>
@@ -391,12 +392,12 @@
                 </div>
                 <div class="card">
                     <div class="card-header" id="headingThree">
-                        <h5 class="mb-0 d-flex flex-row ">
+                        <h5 class="mb-0 ">
                             <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree"
                                     aria-expanded="false" aria-controls="collapseThree">
                                 resultat final
                             </button>
-                            <a href="#" class="btn btn-success btn-icon-split mx-2"
+                            <button class="btn btn-success btn-sm btn-icon-split mx-2"
                                data-toggle="modal" data-target="#list_connector">
                                 <div>
                                     <span class="text">connector</span>
@@ -405,8 +406,8 @@
                                 <span class="icon text-white-50">
                       <i class="fas fa-info-circle"></i>
                     </span>
-                            </a>
-                            <a href="#" class="btn btn-secondary btn-icon-split mx-2"
+                            </button>
+                            <button class="btn btn-secondary btn-sm btn-icon-split mx-2"
                                data-toggle="modal" data-target="#list_neg">
                                 <div>
                                     <span class="text">negation</span>
@@ -415,8 +416,8 @@
                                 <span class="icon text-white-50">
                       <i class="fas fa-info-circle"></i>
                     </span>
-                            </a>
-                            <a href="#" class="btn btn-info btn-icon-split mx-2"
+                            </button>
+                            <button class="btn btn-info btn-sm btn-icon-split mx-2"
                                data-toggle="modal" data-target="#list_adv">
                                 <div>
                                     <span class="text">adverbe</span>
@@ -425,7 +426,7 @@
                                 <span class="icon text-white-50">
                       <i class="fas fa-info-circle"></i>
                     </span>
-                            </a>
+                            </button>
                         </h5>
                     </div>
                     <div id="collapseThree" class="collapse show" aria-labelledby="headingThree"
